<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_news_feed"
        android:icon="@drawable/ic_news_feed_24"
        android:title="@string/menu_news_feed"/>

    <item
        android:id="@+id/menu_connection"
        android:icon="@drawable/ic_connection_24"
        android:title="@string/menu_connection"/>

    <item
        android:id="@+id/menu_post"
        android:icon="@drawable/ic_post_24"
        android:title="@string/menu_post"/>

    <item
        android:id="@+id/menu_notification"
        android:icon="@drawable/ic_notification_24"
        android:title="@string/menu_notification"/>

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_profile_24"
        android:title="@string/menu_profile"/>
</menu>